@@ -1,29 +1,44 @@
 package edu.harvard.iq.dataverse.util;
 
 import com.ocpsoft.pretty.PrettyContext;
+
 import edu.harvard.iq.dataverse.DataFile;
 import edu.harvard.iq.dataverse.DataverseServiceBean;
+import edu.harvard.iq.dataverse.DvObjectContainer;
 import edu.harvard.iq.dataverse.authorization.AuthenticationServiceBean;
 import edu.harvard.iq.dataverse.authorization.providers.builtin.BuiltinAuthenticationProvider;
 import edu.harvard.iq.dataverse.authorization.providers.oauth2.AbstractOAuth2AuthenticationProvider;
-import static edu.harvard.iq.dataverse.datasetutility.FileSizeChecker.bytesToHumanReadable;
 import edu.harvard.iq.dataverse.settings.SettingsServiceBean;
 import edu.harvard.iq.dataverse.validation.PasswordValidatorUtil;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.StringReader;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
 import java.time.Year;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.MissingResourceException;
 import java.util.Properties;
 import java.util.ResourceBundle;
 import java.util.logging.Logger;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
 import javax.ejb.EJB;
 import javax.ejb.Stateless;
 import javax.inject.Named;
+import javax.json.Json;
+import javax.json.JsonArray;
+import javax.json.JsonObject;
+import javax.json.JsonReader;
+import javax.json.JsonString;
+import javax.json.JsonValue;
+
 import org.passay.CharacterRule;
 import org.apache.commons.io.IOUtils;
 
@@ -57,7 +72,7 @@ public class SystemConfig {
     public static final String FQDN = "dataverse.fqdn";
     
     /**
-     * A JVM option for specifying the "official" URL of the site. 
+     * A JVM option for specifying the "official" URL of the site.
      * Unlike the FQDN option above, this would be a complete URL, 
      * with the protocol, port number etc. 
      */
@@ -76,7 +91,7 @@ public class SystemConfig {
 
     /**
      * A JVM option to override the number of minutes for which a password reset
-     * token is valid ({@link #minutesUntilPasswordResetTokenExpires}).
+     * token is valid ({@link #getMinutesUntilPasswordResetTokenExpires}).
      */
     private static final String PASSWORD_RESET_TIMEOUT_IN_MINUTES = "dataverse.auth.password-reset-timeout-in-minutes";
 
@@ -91,7 +106,9 @@ public class SystemConfig {
      * zip file upload.
      */
     private static final int defaultZipUploadFilesLimit = 1000; 
+    public static final long defaultZipDownloadLimit = 104857600L; // 100MB
     private static final int defaultMultipleUploadFilesLimit = 1000;
+    private static final int defaultLoginSessionTimeout = 480; // = 8 hours
 
     private static String appVersionString = null; 
     private static String buildNumberString = null; 
@@ -99,11 +116,21 @@ public class SystemConfig {
     private static final String JVM_TIMER_SERVER_OPTION = "dataverse.timerServer";
     
     private static final long DEFAULT_GUESTBOOK_RESPONSES_DISPLAY_LIMIT = 5000L; 
+    private static final long DEFAULT_THUMBNAIL_SIZE_LIMIT_IMAGE = 3000000L; // 3 MB
+    private static final long DEFAULT_THUMBNAIL_SIZE_LIMIT_PDF = 1000000L; // 1 MB
+    
+    public final static String DEFAULTCURATIONLABELSET = "DEFAULT";
+    public final static String CURATIONLABELSDISABLED = "DISABLED";
     
     public String getVersion() {
         return getVersion(false);
     }
     
+    // The return value is a "prviate static String", that should be initialized
+    // once, on the first call (see the code below)... But this is a @Stateless 
+    // bean... so that would mean "once per thread"? - this would be a prime 
+    // candidate for being moved into some kind of an application-scoped caching
+    // service... some CachingService @Singleton - ? (L.A. 5.8)
     public String getVersion(boolean withBuildNumber) {
         
         if (appVersionString == null) {
@@ -251,16 +278,18 @@ public class SystemConfig {
         int defaultValue = 10080; //one week in minutes
         SettingsServiceBean.Key key = SettingsServiceBean.Key.MetricsCacheTimeoutMinutes;
         String metricsCacheTimeString = settingsService.getValueForKey(key);
-        int returnInt = 0;
-        try {
-            returnInt = Integer.parseInt(metricsCacheTimeString);
-            if (returnInt >= 0) {
-                return returnInt;
-            } else {
-                logger.info("Returning " + defaultValue + " for " + key + " because value must be greater than zero, not \"" + metricsCacheTimeString + "\".");
+        if (metricsCacheTimeString != null) {
+            int returnInt = 0;
+            try {
+                returnInt = Integer.parseInt(metricsCacheTimeString);
+                if (returnInt >= 0) {
+                    return returnInt;
+                } else {
+                    logger.info("Returning " + defaultValue + " for " + key + " because value must be greater than zero, not \"" + metricsCacheTimeString + "\".");
+                }
+            } catch (NumberFormatException ex) {
+                logger.info("Returning " + defaultValue + " for " + key + " because value must be an integer greater than zero, not \"" + metricsCacheTimeString + "\".");
             }
-        } catch (NumberFormatException ex) {
-            logger.info("Returning " + defaultValue + " for " + key + " because value must be an integer greater than zero, not \"" + metricsCacheTimeString + "\".");
         }
         return defaultValue;
     }
@@ -363,7 +392,7 @@ public class SystemConfig {
     }
 
     public String getGuidesBaseUrl() {
-        String saneDefault = "http://guides.dataverse.org";
+        String saneDefault = "https://guides.dataverse.org";
         String guidesBaseUrl = settingsService.getValueForKey(SettingsServiceBean.Key.GuidesBaseUrl, saneDefault);
         return guidesBaseUrl + "/" + getGuidesLanguage();
     }
@@ -388,49 +417,57 @@ public class SystemConfig {
         return metricsUrl;
     }
 
-    /**
-     * Download-as-zip size limit.
-     * returns 0 if not specified; 
-     * (the file zipper will then use the default value)
-     * set to -1 to disable zip downloads. 
-     */
-    
-    public long getZipDownloadLimit() {
-        String zipLimitOption = settingsService.getValueForKey(SettingsServiceBean.Key.ZipDownloadLimit);   
-        
-        Long zipLimit = null; 
-        if (zipLimitOption != null && !zipLimitOption.equals("")) {
+    public static long getLongLimitFromStringOrDefault(String limitSetting, Long defaultValue) {
+        Long limit = null;
+
+        if (limitSetting != null && !limitSetting.equals("")) {
             try {
-                zipLimit = new Long(zipLimitOption);
+                limit = Long.valueOf(limitSetting);
             } catch (NumberFormatException nfe) {
-                zipLimit = null; 
+                limit = null;
             }
         }
-        
-        if (zipLimit != null) {
-            return zipLimit.longValue();
+
+        return limit != null ? limit : defaultValue;
+    }
+
+    public static int getIntLimitFromStringOrDefault(String limitSetting, Integer defaultValue) {
+        Integer limit = null;
+
+        if (limitSetting != null && !limitSetting.equals("")) {
+            try {
+                limit = Integer.valueOf(limitSetting);
+            } catch (NumberFormatException nfe) {
+                limit = null;
+            }
         }
-        
-        return 0L; 
+
+        return limit != null ? limit : defaultValue;
+    }
+
+    /**
+     * Download-as-zip size limit.
+     * returns defaultZipDownloadLimit if not specified; 
+     * set to -1 to disable zip downloads. 
+     */
+    public long getZipDownloadLimit() {
+        String zipLimitOption = settingsService.getValueForKey(SettingsServiceBean.Key.ZipDownloadLimit);
+        return getLongLimitFromStringOrDefault(zipLimitOption, defaultZipDownloadLimit);
     }
     
     public int getZipUploadFilesLimit() {
         String limitOption = settingsService.getValueForKey(SettingsServiceBean.Key.ZipUploadFilesLimit);
-        Integer limit = null; 
-        
-        if (limitOption != null && !limitOption.equals("")) {
-            try {
-                limit = new Integer(limitOption);
-            } catch (NumberFormatException nfe) {
-                limit = null; 
-            }
-        }
-        
-        if (limit != null) {
-            return limit;
-        }
-        
-        return defaultZipUploadFilesLimit; 
+        return getIntLimitFromStringOrDefault(limitOption, defaultZipUploadFilesLimit);
+    }
+    
+    /**
+     * Session timeout, in minutes. 
+     * (default value provided)
+     */
+    public int getLoginSessionTimeout() {
+        return getIntLimitFromStringOrDefault(
+                settingsService.getValueForKey(SettingsServiceBean.Key.LoginSessionTimeout), 
+                defaultLoginSessionTimeout); 
     }
     
     /*
@@ -439,83 +476,41 @@ public class SystemConfig {
     */
     public int getMultipleUploadFilesLimit() {
         String limitOption = settingsService.getValueForKey(SettingsServiceBean.Key.MultipleUploadFilesLimit);
-        Integer limit = null; 
-        
-        if (limitOption != null && !limitOption.equals("")) {
-            try {
-                limit = new Integer(limitOption);
-            } catch (NumberFormatException nfe) {
-                limit = null; 
-            }
-        }
-        
-        if (limit != null) {
-            return limit;
-        }
-        
-        return defaultMultipleUploadFilesLimit; 
+        return getIntLimitFromStringOrDefault(limitOption, defaultMultipleUploadFilesLimit);
     }
     
     public long getGuestbookResponsesPageDisplayLimit() {
-        String limitSetting = settingsService.getValueForKey(SettingsServiceBean.Key.GuestbookResponsesPageDisplayLimit);   
-        
-        Long limit = null; 
-        if (limitSetting != null && !limitSetting.equals("")) {
-            try {
-                limit = new Long(limitSetting);
-            } catch (NumberFormatException nfe) {
-                limit = null; 
-            }
-        }
-        
-        if (limit != null) {
-            return limit.longValue();
-        }
-        
-        return DEFAULT_GUESTBOOK_RESPONSES_DISPLAY_LIMIT; 
+        String limitSetting = settingsService.getValueForKey(SettingsServiceBean.Key.GuestbookResponsesPageDisplayLimit);
+        return getLongLimitFromStringOrDefault(limitSetting, DEFAULT_GUESTBOOK_RESPONSES_DISPLAY_LIMIT);
     }
     
     public long getUploadLogoSizeLimit(){
         return 500000;
     }
 
-    // TODO: (?)
-    // create sensible defaults for these things? -- 4.2.2
     public long getThumbnailSizeLimitImage() {
-        long limit = getThumbnailSizeLimit("Image");
-        return limit == 0 ? 500000 : limit;
-    } 
-    
-    public long getThumbnailSizeLimitPDF() {
-        long limit = getThumbnailSizeLimit("PDF");
-        return limit == 0 ? 500000 : limit;
+        return getThumbnailSizeLimit("Image");
     }
-    
-    public long getThumbnailSizeLimit(String type) {
+
+    public long getThumbnailSizeLimitPDF() {
+        return getThumbnailSizeLimit("PDF");
+    }
+
+    public static long getThumbnailSizeLimit(String type) {
         String option = null; 
         
         //get options via jvm options
         
         if ("Image".equals(type)) {
             option = System.getProperty("dataverse.dataAccess.thumbnail.image.limit");
+            return getLongLimitFromStringOrDefault(option, DEFAULT_THUMBNAIL_SIZE_LIMIT_IMAGE);
         } else if ("PDF".equals(type)) {
             option = System.getProperty("dataverse.dataAccess.thumbnail.pdf.limit");
+            return getLongLimitFromStringOrDefault(option, DEFAULT_THUMBNAIL_SIZE_LIMIT_PDF);
         }
-        Long limit = null; 
-        
-        if (option != null && !option.equals("")) {
-            try {
-                limit = new Long(option);
-            } catch (NumberFormatException nfe) {
-                limit = null; 
-            }
-        }
-        
-        if (limit != null) {
-            return limit.longValue();
-        }
-        
-        return 0l;
+
+        // Zero (0) means no limit.
+        return getLongLimitFromStringOrDefault(option, 0L);
     }
     
     public boolean isThumbnailGenerationDisabledForType(String type) {
@@ -531,8 +526,16 @@ public class SystemConfig {
     }
     
     public String getApplicationTermsOfUse() {
+        String language = BundleUtil.getCurrentLocale().getLanguage();
         String saneDefaultForAppTermsOfUse = BundleUtil.getStringFromBundle("system.app.terms");
+        // Get the value for the defaultLocale. IT will either be used as the return
+        // value, or as a better default than the saneDefaultForAppTermsOfUse if there
+        // is no language-specific value
         String appTermsOfUse = settingsService.getValueForKey(SettingsServiceBean.Key.ApplicationTermsOfUse, saneDefaultForAppTermsOfUse);
+        //Now get the language-specific value if it exists
+        if (language != null && !language.equalsIgnoreCase(BundleUtil.getDefaultLocale().getLanguage())) {
+            appTermsOfUse = settingsService.getValueForKey(SettingsServiceBean.Key.ApplicationTermsOfUse, language,	appTermsOfUse);
+        }
         return appTermsOfUse;
     }
 
@@ -561,14 +564,10 @@ public class SystemConfig {
         return settingsService.isTrueForKey(SettingsServiceBean.Key.FilesOnDatasetPageFromSolr, safeDefaultIfKeyNotFound);
     }
 
-    public Long getMaxFileUploadSize(){
-         return settingsService.getValueForKeyAsLong(SettingsServiceBean.Key.MaxFileUploadSizeInBytes);
+    public Long getMaxFileUploadSizeForStore(String driverId){
+         return settingsService.getValueForCompoundKeyAsLong(SettingsServiceBean.Key.MaxFileUploadSizeInBytes, driverId);
      }
     
-    public String getHumanMaxFileUploadSize(){
-         return bytesToHumanReadable(getMaxFileUploadSize());
-     }
-
     public Integer getSearchHighlightFragmentSize() {
         String fragSize = settingsService.getValueForKey(SettingsServiceBean.Key.SearchHighlightFragmentSize);
         if (fragSize != null) {
@@ -580,7 +579,7 @@ public class SystemConfig {
         }
         return null;
     }
-    
+
     public long getTabularIngestSizeLimit() {
         // This method will return the blanket ingestable size limit, if 
         // set on the system. I.e., the universal limit that applies to all 
@@ -675,7 +674,7 @@ public class SystemConfig {
     }
 
     public String getNameOfInstallation() {
-        return dataverseService.findRootDataverse().getName();
+        return dataverseService.getRootDataverseName();
     }
 
     public AbstractOAuth2AuthenticationProvider.DevOAuthAccountType getDevOAuthAccountType() {
@@ -709,6 +708,10 @@ public class SystemConfig {
     public boolean isShibPassiveLoginEnabled() {
         boolean defaultResponse = false;
         return settingsService.isTrueForKey(SettingsServiceBean.Key.ShibPassiveLoginEnabled, defaultResponse);
+    }
+    public boolean isShibAttributeCharacterSetConversionEnabled() {
+        boolean defaultResponse = true;
+        return settingsService.isTrueForKey(SettingsServiceBean.Key.ShibAttributeCharacterSetConversionEnabled, defaultResponse);
     }
 
     /**
@@ -853,7 +856,14 @@ public class SystemConfig {
          * Traditional Dataverse file handling, which tends to involve users
          * uploading and downloading files using a browser or APIs.
          */
-        NATIVE("native/http");
+        NATIVE("native/http"),
+
+        /**
+         * Upload through Globus of large files
+         */
+
+        GLOBUS("globus")
+        ;
 
 
         private final String text;
@@ -884,7 +894,7 @@ public class SystemConfig {
     /**
      * See FileUploadMethods.
      *
-     * TODO: Consider if dataverse.files.s3-download-redirect belongs here since
+     * TODO: Consider if dataverse.files.<id>.download-redirect belongs here since
      * it's a way to bypass Glassfish when downloading.
      */
     public enum FileDownloadMethods {
@@ -893,7 +903,9 @@ public class SystemConfig {
          * go through Glassfish.
          */
         RSYNC("rsal/rsync"),
-        NATIVE("native/http");
+        NATIVE("native/http"),
+        GLOBUS("globus")
+        ;
         private final String text;
 
         private FileDownloadMethods(final String text) {
@@ -981,15 +993,19 @@ public class SystemConfig {
     }
     
     public boolean isRsyncUpload(){
-        return getUploadMethodAvailable(SystemConfig.FileUploadMethods.RSYNC.toString());
+        return getMethodAvailable(SystemConfig.FileUploadMethods.RSYNC.toString(), true);
     }
-    
+
+    public boolean isGlobusUpload(){
+        return getMethodAvailable(FileUploadMethods.GLOBUS.toString(), true);
+    }
+
     // Controls if HTTP upload is enabled for both GUI and API.
     public boolean isHTTPUpload(){       
-        return getUploadMethodAvailable(SystemConfig.FileUploadMethods.NATIVE.toString());       
+        return getMethodAvailable(SystemConfig.FileUploadMethods.NATIVE.toString(), true);
     }
     
-    public boolean isRsyncOnly(){       
+    public boolean isRsyncOnly(){
         String downloadMethods = settingsService.getValueForKey(SettingsServiceBean.Key.DownloadMethods);
         if(downloadMethods == null){
             return false;
@@ -1002,26 +1018,37 @@ public class SystemConfig {
             return false;
         } else {
            return  Arrays.asList(uploadMethods.toLowerCase().split("\\s*,\\s*")).size() == 1 && uploadMethods.toLowerCase().equals(SystemConfig.FileUploadMethods.RSYNC.toString());
-        }        
+        }
     }
     
     public boolean isRsyncDownload() {
-        String downloadMethods = settingsService.getValueForKey(SettingsServiceBean.Key.DownloadMethods);
-        return downloadMethods !=null && downloadMethods.toLowerCase().contains(SystemConfig.FileDownloadMethods.RSYNC.toString());
+        return getMethodAvailable(SystemConfig.FileUploadMethods.RSYNC.toString(), false);
     }
     
     public boolean isHTTPDownload() {
-        String downloadMethods = settingsService.getValueForKey(SettingsServiceBean.Key.DownloadMethods);
-        logger.warning("Download Methods:" + downloadMethods);
-        return downloadMethods !=null && downloadMethods.toLowerCase().contains(SystemConfig.FileDownloadMethods.NATIVE.toString());
+        return getMethodAvailable(SystemConfig.FileUploadMethods.NATIVE.toString(), false);
+    }
+
+    public boolean isGlobusDownload() {
+        return getMethodAvailable(FileUploadMethods.GLOBUS.toString(), false);
     }
     
-    private Boolean getUploadMethodAvailable(String method){
-        String uploadMethods = settingsService.getValueForKey(SettingsServiceBean.Key.UploadMethods); 
-        if (uploadMethods==null){
+    public boolean isGlobusFileDownload() {
+        return (isGlobusDownload() && settingsService.isTrueForKey(SettingsServiceBean.Key.GlobusSingleFileTransfer, false));
+    }
+
+    public List<String> getGlobusStoresList() {
+    String globusStores = settingsService.getValueForKey(SettingsServiceBean.Key.GlobusStores, "");
+    return Arrays.asList(globusStores.split("\\s*,\\s*"));
+    }
+
+    private Boolean getMethodAvailable(String method, boolean upload) {
+        String methods = settingsService.getValueForKey(
+                upload ? SettingsServiceBean.Key.UploadMethods : SettingsServiceBean.Key.DownloadMethods);
+        if (methods == null) {
             return false;
         } else {
-           return  Arrays.asList(uploadMethods.toLowerCase().split("\\s*,\\s*")).contains(method);
+            return Arrays.asList(methods.toLowerCase().split("\\s*,\\s*")).contains(method);
         }
     }
     
@@ -1036,7 +1063,7 @@ public class SystemConfig {
     public boolean isDataFilePIDSequentialDependent(){
         String doiIdentifierType = settingsService.getValueForKey(SettingsServiceBean.Key.IdentifierGenerationStyle, "randomString");
         String doiDataFileFormat = settingsService.getValueForKey(SettingsServiceBean.Key.DataFilePIDFormat, "DEPENDENT");
-        if (doiIdentifierType.equals("sequentialNumber") && doiDataFileFormat.equals("DEPENDENT")){
+        if (doiIdentifierType.equals("storedProcGenerated") && doiDataFileFormat.equals("DEPENDENT")){
             return true;
         }
         return false;
@@ -1052,10 +1079,153 @@ public class SystemConfig {
         }
         return retVal;
     }
-    
+
+    public boolean isAllowCustomTerms() {
+        boolean safeDefaultIfKeyNotFound = true;
+        return settingsService.isTrueForKey(SettingsServiceBean.Key.AllowCustomTermsOfUse, safeDefaultIfKeyNotFound);
+    }
+
     public boolean isFilePIDsEnabled() {
         boolean safeDefaultIfKeyNotFound = true;
         return settingsService.isTrueForKey(SettingsServiceBean.Key.FilePIDsEnabled, safeDefaultIfKeyNotFound);
     }
     
+    public boolean isIndependentHandleService() {
+        boolean safeDefaultIfKeyNotFound = false;
+        return settingsService.isTrueForKey(SettingsServiceBean.Key.IndependentHandleService, safeDefaultIfKeyNotFound);
+    
+    }
+    
+    public String getHandleAuthHandle() {
+        String handleAuthHandle = settingsService.getValueForKey(SettingsServiceBean.Key.HandleAuthHandle, null);
+        return handleAuthHandle;
+    }
+
+    public String getMDCLogPath() {
+        String mDCLogPath = settingsService.getValueForKey(SettingsServiceBean.Key.MDCLogPath, null);
+        return mDCLogPath;
+    }
+    
+    public boolean isDatafileValidationOnPublishEnabled() {
+        boolean safeDefaultIfKeyNotFound = true;
+        return settingsService.isTrueForKey(SettingsServiceBean.Key.FileValidationOnPublishEnabled, safeDefaultIfKeyNotFound);
+    }
+
+	public boolean directUploadEnabled(DvObjectContainer container) {
+    	return Boolean.getBoolean("dataverse.files." + container.getEffectiveStorageDriverId() + ".upload-redirect");
+	}
+	
+	public String getDataCiteRestApiUrlString() {
+		//As of 5.0 the 'doi.dataciterestapiurlstring' is the documented jvm option. Prior versions used 'doi.mdcbaseurlstring' or were hardcoded to api.datacite.org, so the defaults are for backward compatibility.
+        return System.getProperty("doi.dataciterestapiurlstring", System.getProperty("doi.mdcbaseurlstring", "https://api.datacite.org"));
+	}
+        
+    public boolean isExternalDataverseValidationEnabled() {
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DataverseMetadataValidatorScript) != null;
+        // alternatively, we can also check if the script specified exists, 
+        // and is executable. -- ?
+    }
+    
+    public boolean isExternalDatasetValidationEnabled() {
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DatasetMetadataValidatorScript) != null;
+        // alternatively, we can also check if the script specified exists, 
+        // and is executable. -- ?
+    }
+    
+    public String getDataverseValidationExecutable() {
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DataverseMetadataValidatorScript);
+    }
+    
+    public String getDatasetValidationExecutable() {
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DatasetMetadataValidatorScript);
+    }
+    
+    public String getDataverseValidationFailureMsg() {
+        String defaultMessage = "This dataverse collection cannot be published because it has failed an external metadata validation test.";
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DataverseMetadataPublishValidationFailureMsg, defaultMessage);
+    }
+    
+    public String getDataverseUpdateValidationFailureMsg() {
+        String defaultMessage = "This dataverse collection cannot be updated because it has failed an external metadata validation test.";
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DataverseMetadataUpdateValidationFailureMsg, defaultMessage);
+    }
+    
+    public String getDatasetValidationFailureMsg() {
+        String defaultMessage = "This dataset cannot be published because it has failed an external metadata validation test.";
+        return settingsService.getValueForKey(SettingsServiceBean.Key.DatasetMetadataValidationFailureMsg, defaultMessage);
+    }
+    
+    public boolean isExternalValidationAdminOverrideEnabled() {
+        return "true".equalsIgnoreCase(settingsService.getValueForKey(SettingsServiceBean.Key.ExternalValidationAdminOverride));
+    }
+    
+    public long getDatasetValidationSizeLimit() {
+        String limitEntry = settingsService.getValueForKey(SettingsServiceBean.Key.DatasetChecksumValidationSizeLimit);
+
+        if (limitEntry != null) {
+            try {
+                Long sizeOption = new Long(limitEntry);
+                return sizeOption;
+            } catch (NumberFormatException nfe) {
+                logger.warning("Invalid value for DatasetValidationSizeLimit option? - " + limitEntry);
+            }
+        }
+        // -1 means no limit is set;
+        return -1;
+    }
+
+    public long getFileValidationSizeLimit() {
+        String limitEntry = settingsService.getValueForKey(SettingsServiceBean.Key.DataFileChecksumValidationSizeLimit);
+
+        if (limitEntry != null) {
+            try {
+                Long sizeOption = new Long(limitEntry);
+                return sizeOption;
+            } catch (NumberFormatException nfe) {
+                logger.warning("Invalid value for FileValidationSizeLimit option? - " + limitEntry);
+            }
+        }
+        // -1 means no limit is set;
+        return -1;
+    }
+    public Map<String, String[]> getCurationLabels() {
+        Map<String, String[]> labelMap = new HashMap<String, String[]>();
+        String setting = settingsService.getValueForKey(SettingsServiceBean.Key.AllowedCurationLabels, "");
+        if (!setting.isEmpty()) {
+            try {
+                JsonReader jsonReader = Json.createReader(new StringReader(setting));
+
+                Pattern pattern = Pattern.compile("(^[\\w ]+$)"); // alphanumeric, underscore and whitespace allowed
+
+                JsonObject labelSets = jsonReader.readObject();
+                for (String key : labelSets.keySet()) {
+                    JsonArray labels = (JsonArray) labelSets.getJsonArray(key);
+                    String[] labelArray = new String[labels.size()];
+
+                    boolean allLabelsOK = true;
+                    Iterator<JsonValue> iter = labels.iterator();
+                    int i = 0;
+                    while (iter.hasNext()) {
+                        String label = ((JsonString) iter.next()).getString();
+                        Matcher matcher = pattern.matcher(label);
+                        if (!matcher.matches()) {
+                            logger.warning("Label rejected: " + label + ", Label set " + key + " ignored.");
+                            allLabelsOK = false;
+                            break;
+                        }
+                        labelArray[i] = label;
+                        i++;
+                    }
+                    if (allLabelsOK) {
+                        labelMap.put(key, labelArray);
+                    }
+                }
+            } catch (Exception e) {
+                logger.warning("Unable to parse " + SettingsServiceBean.Key.AllowedCurationLabels.name() + ": "
+                        + e.getLocalizedMessage());
+                e.printStackTrace();
+            }
+        }
+        return labelMap;
+    }
 }
